--- a/index.html
+++ b/index.html
@@ -2,70 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>15</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<header>
-<nav>
-<ul>
-<li> <a href="#">Shop</a></li>
-<li><a href="#">Explore</a></li>
-<li><h3><a href="#">GROVEMADE</a></h3></li>
-<li><a href="#">My Cart</a></li>
-</ul>    
-</nav>
-
-<main>
-<ul>
-    <li>
-       <img src="Rectangle.jpg" alt="computer"> </li>
-<li>  
-<p><center><h1>Design Inspires</h1></center></p>
-<h6><center>Build your dream workspace, so you can get your best work done.</center> </h6>
-<h4><center>GET STARTED</center></h4>
-</li>
-
-<li>
-<img src="Rectangle-1.jpg" alt="computer1">
-<p><h2>Desk Pads</h2></p>    
-<h5>LEARN MORE</h5> 
-</li>
-<li>
-<img src="Rectangle-2.jpg" alt="computer2">
-<p><h2>Laptop Stands</h2></p>    
-<h5>LEARN MORE</h5> 
-</li>
-<li>
-<p><center><h1>Featured Products</h1></center></p>   
-<h6><center>See What’s Trending Right Now</center> </h6>
-</li>
-    <li>
-    <img src="Rectangle-3.jpg" alt="mobil1">
-   <h6>Walnut MagSafe Stand</h6> 
-   <h6>$120</h6> 
-    </li>
-    <li>
-        <img src="Rectangle-4.jpg" alt="mobil2">
-       <h6>Walnut Laptop Riser</h6> 
-       <h6>$150</h6> 
-    </li>
-        <img src="Rectangle-5.jpg" alt="mobil3">
-        <h6>Walnut iPad Stand</h6> 
-        <h6>$80</h6> 
-         </li>
-    </li>
-        <img src="Rectangle-6.jpg" alt="mobil4">
-        <h6>Walnut Monitor Stand</h6> 
-        <h6>$100</h6> 
-         </li>
-<li><img src="Rectangle-7.jpg" alt="mobil5" ></li>
-<li><img src="Rectangle-3.jpg" alt="" srcset="you"></li>
-
-        </ul>
-</main>
-
-</header>
-</body>    
+    <div class="container">
+        <div class="box"></div>
+    </div>    
+</body>
 </html>
